# ironpress

./: .gitignore  .pubignore  API.md  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: build.yml  test.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: .flutter-plugins-dependencies  pubspec.yaml
example/lib/: main.dart
example/lib/benchmark/: compression_benchmark.dart
example/lib/screens/: advanced_options_screen.dart  basic_compression_screen.dart  batch_screen.dart  benchmark_screen.dart  file_io_screen.dart  format_comparison_screen.dart  presets_screen.dart  probe_screen.dart  target_size_screen.dart
example/lib/shared/: image_card.dart  stat_row.dart  test_image.dart
ios/: ironpress.podspec
ios/Classes/: IronpressPlugin.swift
ios/Frameworks/ironpress.xcframework/: Info.plist
lib/: ironpress.dart
lib/src/: bindings.dart  ironpress_impl.dart  native_loader.dart  options.dart
linux/: CMakeLists.txt
macos/: ironpress.podspec
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: compress.rs  error.rs  lib.rs  options.rs  tests.rs
scripts/: build.sh  perf_benchmark.dart  perf_benchmark_test.dart
test/: integration_test.dart  ironpress_test.dart  options_test.dart
windows/: CMakeLists.txt
