[package]
name = "ironpress_native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust image compression engine for Flutter"

[lib]
name = "ironpress"
crate-type = ["cdylib", "staticlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
zune-jpeg = "0.5"
mozjpeg-rs = "0.5"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
webp = "0.3"
rayon = "1.10"
libc = "0.2"
fast_image_resize = "5"

[profile.release]
opt-level = 3            # Optimize for throughput
lto = "fat"              # Full LTO for best cross-crate inlining (mozjpeg+image+oxipng)
codegen-units = 1        # Better code generation at the cost of compile time
panic = "unwind"         # Required for catch_unwind (batch crash safety)
strip = true             # Strip symbols from binary

[profile.release.package."*"]
opt-level = 3
